cli/tests/snapshots/integration__run_images@flip_vertical1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="65.0" height="93.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 32.36068 0.0 L 52.36068 61.553671 L 0.0 23.51141 L 64.72136 23.51141 L 12.36068 61.553671 Z" fill="rgba(178, 34, 34, 1.0)" />
    <path d="M 32.36068 92.330506 L 52.36068 61.553671 L 0.0 80.574801 L 64.72136 80.574801 L 12.36068 61.553671 Z" fill="rgba(128, 128, 128, 1.0)" />
  </g>
</svg>
