cli/tests/snapshots/integration__run_images@frame1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="40.0" height="40.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="40.0" height="40.0" transform="rotate(0.0 20.0 20.0)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 40.0 20.0 A 20.0 20.0 0.0 0 1 0.0 20.0 A 20.0 20.0 0.0 0 1 40.0 20.0 Z" fill="rgba(128, 128, 128, 1.0)" />
      <path d="M 0.0 0.0 L 40.0 0.0 L 40.0 40.0 L 0.0 40.0 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-width="2.0" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
    </g>
  </g>
</svg>
