cli/tests/snapshots/integration__run_images@isosceles_triangle3.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="32.0" height="58.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 31.058285 0.0 L 15.529143 57.95555 L 0.0 0.0 Z" fill="rgba(32, 178, 170, 1.0)" />
</svg>
